--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -120,12 +120,6 @@
             <div class="desc">Сертификат по Data Science</div>
         </div>
 
-
-
-
-
-
-
         <div class="gallery">
             <a target="_blank" href="../assets/certs/git.jpg">
                 <img src="../assets/certs/git.jpg" height="200">
@@ -187,6 +181,13 @@
                 <img src="../assets/certs/sql.png" height="200">
             </a>
             <div class="desc">Сертификат по SQL</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="../assets/certs/assembly-8086.png">
+                <img src="../assets/certs/assembly-8086.png" height="200">
+            </a>
+            <div class="desc">Сертификат по Assembly 8086</div>
         </div>
     </div>
 </body>
