--- a/pages/certificates.html
+++ b/pages/certificates.html
@@ -189,6 +189,36 @@
             </a>
             <div class="desc">Сертификат по Assembly 8086</div>
         </div>
+
+
+
+        <div class="gallery">
+            <a target="_blank" href="../assets/certs/cambridge-b2.jpg">
+                <img src="../assets/certs/cambridge-b2.jpg" height="200">
+            </a>
+            <div class="desc">Сертификат Cambridge English B2</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="../assets/certs/ielts-b2.jpg">
+                <img src="../assets/certs/ielts-b2.jpg" height="200">
+            </a>
+            <div class="desc">Сертификат IELTS English B2</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="../assets/certs/gramota-gimnaziq.jpg">
+                <img src="../assets/certs/gramota-gimnaziq.jpg" height="200">
+            </a>
+            <div class="desc">Грамота от гимназия ПМГ "Иван Вазов"</div>
+        </div>
+
+        <div class="gallery">
+            <a target="_blank" href="../assets/certs/vish-sadeben-savet-udostoverenie.jpg">
+                <img src="../assets/certs/vish-sadeben-savet-udostoverenie.jpg" height="200">
+            </a>
+            <div class="desc">Удостоверение от Висш Съдебен Съвет</div>
+        </div>
     </div>
 </body>
 </html>
