--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                         <li><a href='pages/certificates.html'>Certificates</a></li>
                         <li><a href='pages/projects.html'>Projects</a></li>
                         <li><a href='pages/documentation.html'>Documentation</a></li>
+                        <li><a href='test.html'>Test</a></li>
                     </ul>
                 </nav>
             </div>
