--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,7 +29,7 @@
     <div class='align-all-left doc-list'>
         <ol>
             <li><a href='../projects/project_family-guy-all-episodes.html'>WEB Family Guy All Episodes</a></li>
-            <li><a href='../projects/project_tmdb-player.html'>WEB TMDB Player !!! WORK IN PROGRESS !!! </a></li>
+            <li><a href='../projects/project_tmdb-player.html'>WEB TMDB Player</a></li>
         </ol>
     </div>
 </body>
