--- a/projects/project_tmdb-player.html
+++ b/projects/project_tmdb-player.html
@@ -31,6 +31,7 @@
     <button onclick="searchMovie()">Search</button>
 
     <ul id="results"></ul>
+    <div id="iframe-container"></div>
 
     <!--<br><br>
     <iframe id="videoFrame" width="560" height="315" src="" frameborder="0" allowfullscreen></iframe>
