--- a/projects/project_tmdb-player.html
+++ b/projects/project_tmdb-player.html
@@ -31,7 +31,7 @@
         <button onclick="searchMovie()">Search</button>
 
         <ul id="results"></ul>
-        <div id="iframe-container"></div>
+        <div id="iframe-container" class="center"></div>
     </div>
 </body>
 </html>
