--- a/pages/projects.html
+++ b/pages/projects.html
@@ -28,8 +28,7 @@
     <div class='align-all-left'><h2>Projects</h2></div>
     <div class='align-all-left doc-list'>
         <ol>
-            <li><a href='../projects/project_family-guy-all-episodes.html'>WEB Family Guy All Episodes</a></li>
-            <li><a href='../projects/project_tmdb-player.html'>WEB TMDB Player</a></li>
+            <!-- Here add <li> elements -->
         </ol>
     </div>
 </body>
